--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -1,4 +1,15 @@
-version: 37
+version: 40
+properties:
+- name: deps_core_version
+  value: v0.1.2-rc.6
+  archived: false
+- name: deps_extensions_version
+  value: v0.1.2-rc.4
+  archived: false
+- name: deps_caching_version
+  value: v0.1.2-rc.4
+  archived: false
+
 jobs:
 - name: GitHub Push
   steps:
@@ -8,14 +19,16 @@ jobs:
     userName: VnUgE
     passwordSecret: github-access-token
     force: false
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !PushRepository
     name: Codeberg push sync
     remoteUrl: https://codeberg.org/VnUgE/Plugins.Essentials.git
     userName: VnUgE
     passwordSecret: codeberg-access-token
     force: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   triggers:
   - !TagCreateTrigger
     projects: Plugins.Essentials
@@ -35,11 +48,12 @@ jobs:
     interpreter: !DefaultInterpreter
       commands: |
         git clone @server_url@/@project_name@ --branch @branch@
-        git clone @server_url@/VNLib.Core core --branch master
-        git clone @server_url@/VNLib.Data.Caching --branch master
-        git clone @server_url@/VNLib.Plugins.Extensions --branch master
+        git clone @server_url@/VNLib.Core core --branch @property:deps_core_version@
+        git clone @server_url@/VNLib.Data.Caching --branch @property:deps_caching_version@
+        git clone @server_url@/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !CommandStep
     name: dev-init core
     runInContainer: false
@@ -48,7 +62,8 @@ jobs:
         cd core
         task -t Module.Taskfile.yaml dev-init
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !CommandStep
     name: run unit tests
     runInContainer: false
@@ -57,7 +72,8 @@ jobs:
         cd @project_name@
         vnbuild test --include @project_name@
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   triggers:
   - !BranchUpdateTrigger
     branches: '** -master'
@@ -75,11 +91,12 @@ jobs:
     interpreter: !DefaultInterpreter
       commands: |
         git clone @server_url@/@project_name@ --branch @branch@
-        git clone @server_url@/VNLib.Core core --branch master
-        git clone @server_url@/VNLib.Data.Caching --branch master
-        git clone @server_url@/VNLib.Plugins.Extensions --branch master
+        git clone @server_url@/VNLib.Core core --branch @property:deps_core_version@
+        git clone @server_url@/VNLib.Data.Caching --branch @property:deps_caching_version@
+        git clone @server_url@/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !CommandStep
     name: VNBuild build
     runInContainer: false
@@ -90,7 +107,8 @@ jobs:
         dotnet gitversion VNLib.Plugins.Extensions /updateprojectfiles
         vnbuild build --no-delay --include @project_name@ --verbose
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !CommandStep
     name: mock publish
     runInContainer: false
@@ -98,7 +116,8 @@ jobs:
       commands: |
         vnbuild publish -i @project_name@
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   triggers:
   - !BranchUpdateTrigger
     branches: develop
@@ -119,11 +138,12 @@ jobs:
     interpreter: !DefaultInterpreter
       commands: |
         git clone @server_url@/@project_name@ --branch @branch@
-        git clone @server_url@/VNLib.Core core --branch master
-        git clone @server_url@/VNLib.Data.Caching --branch master
-        git clone @server_url@/VNLib.Plugins.Extensions --branch master
+        git clone @server_url@/VNLib.Core core --branch @property:deps_core_version@
+        git clone @server_url@/VNLib.Data.Caching --branch @property:deps_caching_version@
+        git clone @server_url@/VNLib.Plugins.Extensions --branch @property:deps_extensions_version@
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !CommandStep
     name: Create git tag
     runInContainer: false
@@ -132,7 +152,8 @@ jobs:
         cd @project_name@
         task -t Module.Taskfile.yaml tag-current-commit
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !CommandStep
     name: VNBuild build
     runInContainer: false
@@ -143,7 +164,8 @@ jobs:
         dotnet gitversion VNLib.Plugins.Extensions /updateprojectfiles
         vnbuild build --no-delay --include @project_name@
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   - !CommandStep
     name: VNBuild publish
     runInContainer: false
@@ -156,7 +178,8 @@ jobs:
     - name: FTP_PASSWORD
       value: '@secret:ftp_password@'
     useTTY: true
-    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+    condition: SUCCESSFUL
+    optional: false
   triggers:
   - !BranchUpdateTrigger
     branches: master
